# academic-os

./: .gitignore  .streamlit-smoke.db  DOGFOODING.md  README.md  course_catalog_hebrew_values.json  course_catalog_hebrew_values_updated.json  pyproject.toml
docs/: domain-design-review.md  domain-model.md  sprint-2-persistence.md  sprint-2b-blockers.md  sprint-2b-workspace.md  sprint-2c-user-experience.md  sprint-2d-hierarchical-navigation.md  sprint-3-5-gui-rebuild.md  sprint-3-daily-study-workflow.md  windows-uv-setup.md
migrations/: README  env.py
migrations/versions/: 0001_initial_schema.py  0002_add_curriculum_item_code_pages.py  0003_add_progress_status_updated_at.py
src/academic_os/: __init__.py
src/academic_os/application/: __init__.py
src/academic_os/application/ports/: __init__.py  curriculum_importer.py  repositories.py  unit_of_work.py
src/academic_os/application/services/: __init__.py  study_workflow.py  workspace.py
src/academic_os/domain/: __init__.py
src/academic_os/domain/entities/: __init__.py  academic_year.py  assignment.py  course.py  degree.py  (+12 more)
src/academic_os/infrastructure/: __init__.py
src/academic_os/interfaces/: __init__.py  cli.py  streamlit_app.py  streamlit_bootstrap.py
tests/: test_architecture.py  test_curriculum_importer_port.py  test_domain_model.py
tests/application/: test_study_workflow_service.py  test_workspace_service.py
tests/importers/: test_json_curriculum_importer.py
tests/interfaces/: test_cli.py  test_streamlit_helpers.py
tests/persistence/: conftest.py  test_migrations.py  test_persistence.py
(+17 files in other folders)
