[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-os"
version = "0.1.0"
description = "A long-term operating system for academic degree management."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --basetemp=.pytest-tmp"
testpaths = ["tests"]
pythonpath = ["src"]
